--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -1,19 +1,13 @@
-<!-- <button type="button" (click)="showDetails()">OPEN</button> -->
+<div>
+  <label>Number of pages: 
+    <button (click)="decreasePages()">-</button>
+      <span>{{pages}}</span>
+    <button (click)="increasePages()">+</button>
+  </label> <br>
+  <label>Number of languges: 
+    <button (click)="decreaseLangs()">-</button>
+      <span>{{languages}}</span>
+    <button (click)="increaseLangs()">+</button>
+  </label>
+</div>
 
-  <div class="container" *ngIf ="showPanel()">
-    
-    <label>Number of pages 
-      <button>-</button>
-      <span>1</span>
-        <button >+</button>
-      </label> <br>
-      <label>Number of languges 
-        <button>-</button>
-        <span>1</span>
-        <button >+</button>
-        </label>
-    
-  </div>
-<!-- <app-budget-list [openPanel]="showPanel()"></app-budget-list> -->
-
-<!-- <app-budget-list [openPanel]="showPanel()" [onShowDetails]="showDetails"></app-budget-list> -->
