--- a/src/app/budget-list/budget-list.component.html
+++ b/src/app/budget-list/budget-list.component.html
@@ -11,7 +11,7 @@
     <header class="header">
       <h1>Get the best quality</h1>
     </header>
-    @for (service of services; track service.id; let i = $index) {
+    @for (service of services; track service; let i = $index) {
     <div class="forms">
       <div class="me-5 ms-5" >
         <h2> {{service.title}} </h2>
@@ -23,17 +23,17 @@
         <input class="form-check-input"  type="checkbox" value="{{service.price}}" (change)="onChange($event, i)">
         Add
         </label>
-        <div class="hidden" *ngIf="openPanel() && counter === i">
-          <app-panel></app-panel>
+        <div >
+          <app-panel class="hidden" *ngIf="openPanel() && counter === i"
+           (passPaneldata)="passDataFromChild($event)">
+          </app-panel>
         </div>
       </div> 
-   
-    </div>   
-
-  }
+    </div> 
+   }  
     <section class="price">
-     <h3>Budget price: {{totalPrice}} $</h3>
-    </section>
+     <h3>Budget price: {{finalBudget()}} $</h3>
+     </section>
   </div>
 
 
