--- a/src/app/panel/panel.component.css
+++ b/src/app/panel/panel.component.css
@@ -1,19 +1,25 @@
-/* .container{
-  position: relative;
-  .hidden{
-    width: auto;
-    position: fixed;
-    right: -410px;
-    top: 100px;
-    &.open {
-      right: 100px;
-    }
+.hidden{
+   padding: 5px;
 }
-} */
 
 button{
   color: rgb(97, 82, 93);
   background-color: beige;
   border: none;
-  border-radius: 50%;
+  
 }
+.info{
+  margin-right: 10px;
+}
+span{
+  display: inline-block;
+  border: 1px solid rgb(210, 208, 208);
+  text-align: center;
+  justify-content: center;
+  border-radius: 10%;
+  width: 40px;
+  height: 25px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
