--- a/src/app/budget-list/budget-list.component.html
+++ b/src/app/budget-list/budget-list.component.html
@@ -20,20 +20,23 @@
       <h2 > {{service.price}}$ </h2>
       <div class="form-check">
         <label class="form-check-label" >
-        <input class="form-check-input"  type="checkbox" value="{{service.price}}" (change)="onChange($event, i)">
+        <input class="form-check-input" name="{{service.id}}" type="checkbox" value="{{service.price}}" (change)="onChange($event, i)">
         Add
         </label>
         <div >
           <app-panel class="hidden" *ngIf="openPanel() && counter === i"
-           (passPaneldata)="passDataFromChild($event)">
+       
+           >
           </app-panel>
         </div>
       </div> 
     </div> 
    }  
     <section class="price">
-     <h3>Budget price: {{finalBudget()}} $</h3>
+      <h3>Budget price: {{clacFinalBudget()}} $</h3>
      </section>
+
+     <app-budget-saved></app-budget-saved>
   </div>
 
 
