--- a/src/app/budget-list/budget-list.component.html
+++ b/src/app/budget-list/budget-list.component.html
@@ -24,10 +24,7 @@
         Add
         </label>
         <div >
-          <app-panel class="hidden" *ngIf="openPanel() && counter === i"
-       
-           >
-          </app-panel>
+          <app-panel class="hidden" *ngIf="openPanel() && counter === i"></app-panel>
         </div>
       </div> 
     </div> 
@@ -36,6 +33,9 @@
       <h3>Budget price: {{clacFinalBudget()}} $</h3>
      </section>
 
+     <div>
+      
+     </div>
      <app-budget-saved></app-budget-saved>
   </div>
 
