--- a/src/app/budget-saved/budget-saved.component.css
+++ b/src/app/budget-saved/budget-saved.component.css
@@ -2,7 +2,7 @@
 .form-group{
   display: grid;
   height: 250px;
-  width: 600px;
+  width: auto;
   align-items: baseline;
   justify-content: center;
   border-radius: 15px;
@@ -14,6 +14,10 @@
 }
 .inputs{
   display: inline;
-  justify-content: ;
   margin: 5px
+}
+.savedInfo{
+  padding: 10px;
+  border-radius: 15px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
 }
